--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
        "u'Phonograph records are generally described by their diameter in inches (12\", 10\", 7\"), the rotational speed in rpm at which they are played (16 2\\u20443, 33 1\\u20443, 45, 78), and their time capacity resulting from a combination of those parameters (LP \\u2013 long playing 33 1\\u20443 rpm, SP \\u2013 78 rpm single, EP \\u2013 12-inch single or extended play, 33 or 45 rpm); their reproductive quality or level of fidelity (high-fidelity, orthophonic, full-range, etc.), and the number of audio channels provided (mono, stereo, quad, etc.).'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
        " u'question': u'What does LP stand for when it comes to time capacity?'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -649,7 +649,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-57cbaac4c0f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mrefineWordTags\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtaggedTrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-17-374024a75bf0>\u001b[0m in \u001b[0;36mrefineWordTags\u001b[0;34m(taggedWordList)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprevWord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprevTag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtaggedWordList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# Ie the first tag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtaggedWordList\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtag\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'ORGANIZATION'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0mtag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'O'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack"
+     ]
+    }
+   ],
+   "source": [
+    "print refineWordTags(taggedTrain[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -713,30 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "vectorize_query() takes exactly 2 arguments (1 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-dcb5a7c49fe9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvectorize_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"What is your name there son?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: vectorize_query() takes exactly 2 arguments (1 given)"
-     ]
-    }
-   ],
-   "source": [
-    "vectorize_query(\"What is your name there son?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -754,26 +755,213 @@
     "        return \"PERSON\"\n",
     "    if 'where' in question:\n",
     "        return \"LOCATION\"\n",
-    "    return \"OTHER\""
+    "    return \"O\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "q = \"where does Jack live?\"\n",
+    "a = [(u'Jack', u'PERSON'),(\"live\",'O'),(\"in\",'O'),(\"Melbourne\",'LOCATION')]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ranking_list': [('in', 'O'), ('Melbourne', 'LOCATION')], 'answer_entities_list': [u'Jack', 'live', 'in', 'Melbourne'], 'same_word_list': [u'Jack', 'live']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = first_filter(q,a)\n",
+    "print test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'question': 'where does Jack live?', 'question_type': 'LOCATION'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "q_t = {}\n",
+    "q_t[\"question\"] = q\n",
+    "q_t[\"question_type\"] = getQuestionType(q)\n",
+    "print q_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ranking_list': ['Melbourne', 'in'], 'answer_entities_list': [u'Jack', 'live', 'in', 'Melbourne'], 'same_word_list': [u'Jack', 'live']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2 = second_filter(q_t, test)\n",
+    "print test2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#first:  whose anwsers all appear in the questions rank the lowest\n",
+    "#assumption: input question in its dictionary value\n",
+    "\n",
+    "def first_filter(question, anwser_entities):\n",
+    "    ranking_dict_1 = {}\n",
+    "    ranking_list = []\n",
+    "    merge_list = []\n",
+    "    answer_entities_list = []\n",
+    "    for entity in anwser_entities:\n",
+    "        answer_entities_list.append(entity[0])\n",
+    "        if entity[0] in question:\n",
+    "            merge_list.append(entity[0])\n",
+    "        else:\n",
+    "            ranking_list.append(entity)\n",
+    "    ranking_dict_1[\"ranking_list\"] = ranking_list\n",
+    "    ranking_dict_1[\"same_word_list\"] = merge_list\n",
+    "    ranking_dict_1[\"answer_entities_list\"] = answer_entities_list\n",
+    "    return ranking_dict_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#second: answers which match the question type should be ranked higher than those that dont\n",
+    "\n",
+    "#assumption: save questions' type in the dictionary format quesiton1 = \n",
+    "#{u'answer': u'long playing',u'answer_sentence': 2, u'question':......., 'question_type:'PERSON'}\n",
+    "\n",
+    "def second_filter(question, ranking_dict_1):\n",
+    "    ranking_dict_2 = {}\n",
+    "    ranking_list =[]\n",
+    "    merge_list = []\n",
+    "    for entity in ranking_dict_1[\"ranking_list\"]:\n",
+    "        if entity[1] == question['question_type']:\n",
+    "            ranking_list.append(entity[0])\n",
+    "        else:\n",
+    "            merge_list.append(entity[0])\n",
+    "    ranking_dict_2[\"same_word_list\"] = ranking_dict_1[\"same_word_list\"]\n",
+    "    ranking_dict_2[\"ranking_list\"] = ranking_list\n",
+    "    ranking_dict_2[\"\"]\n",
+    "    ranking_dict_2[\"answer_entities_list\"] = ranking_dict_1[\"answer_entities_list\"]\n",
+    "    return ranking_dict_2\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Thrid: based on second, the prefered entity should be the one which is close in \n",
+    "#the sentence to a closed-class word form the question\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "def cal_distance_words(entity,same_words, anwser_entities):\n",
+    "    temp = 0\n",
+    "    for same_word in same_words:\n",
+    "        temp += abs(anwser_entities.index(entity) - anwser_entities.index(same_word))\n",
+    "    return float(temp)/float(len(same_words))\n",
+    "\n",
+    "def sort_orderedDict(orderdict):\n",
+    "    return OrderedDict(sorted(orderdict.items(), key = lambda x:x[1], reverse = False))\n",
+    "        \n",
+    "\n",
+    "def third_filter(question,second_filter,anwser_entities):\n",
+    "    dict_ranking ={}\n",
+    "    for entity in second_filter[\"ranking_list\"]:\n",
+    "        dict_ranking[entity]= cal_distance_words(entity, second_filter[\"same_word_list\"],anwser_entities)\n",
+    "    #print dict_ranking\n",
+    "    dict_ranking = sort_orderedDict(dict_ranking)\n",
+    "    #print dict_ranking\n",
+    "    return dict_ranking.items()[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ranking_list': ['Melbourne', 'in'], 'answer_entities_list': [u'Jack', 'live', 'in', 'Melbourne'], 'same_word_list': [u'Jack', 'live']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2 = second_filter(q_t, test)\n",
+    "print test2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print cal_distance_words('Melbourne',test2[\"same_word_list\"],test2[\"answer_entities_list\"])\n",
+    "test3 = third_filter(q_t, test2,test2[\"answer_entities_list\"])\n",
+    "print test3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -910,9 +1098,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -924,7 +1112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
