Eval files tof Derek

--- a/Basic QA System - Performance Evaluation.ipynb
+++ b/Basic QA System - Performance Evaluation.ipynb
@@ -91,7 +91,7 @@
     "        for j in range (0, len(questions)):\n",
     "            answer = questionsList[i][j][\"answer\"]\n",
     "            answerID = questionsList[i][j][\"answer_sentence\"]\n",
-    "            possAnswers = refineWordTags(taggedTrain[i][answerID])\n",
+    "            possAnswers = refineWordTags(taggedDev[i][answerID])\n",
     "            inThere = False\n",
     "            for possAnswer in possAnswers:\n",
     "                if possAnswer[0] == answer:\n",
