Designed pool boosting workflow based on basic QA system, determined basic strategies for all, built out sentence retrieval workflow for boosting improvements, setup semantic models, and additional corpora workflow, compared performance between in doc, multi-doc, and mutli-corpus performance, setup vector evaluation workflow.

--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -209,16 +209,16 @@
     "    result = neighbours.kneighbors(vector_query, 1, return_distance=True)\n",
     "\n",
     "    result_index = result[1][0][0]\n",
-    "    result_similarity = result[0][0][0]\n",
+    "    result_distance = result[0][0][0]\n",
     "    \n",
-    "    return [result_similarity, result_index]"
+    "    return [result_distance, result_index]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -245,11 +245,11 @@
     "\n",
     "        print \"Vector query shape:\\n\\n\\t{0}\".format(vector_query.shape)\n",
     "\n",
-    "        result_similarity, result_index  = closest_document(neighbours, vector_query)\n",
+    "        result_distance, result_index  = closest_document(neighbours, vector_query)\n",
     "        \n",
     "        print\n",
     "\n",
-    "        print \"Result:\\n\\n\\tSimilarity ({0}), Index ({1})\\n\".format(result_similarity, result_index)\n",
+    "        print \"Result:\\n\\n\\tDistance ({0}), Index ({1})\\n\".format(result_distance, result_index)\n",
     "\n",
     "        print\n",
     "\n",
@@ -272,7 +272,8 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -294,7 +295,7 @@
       "\n",
       "Result:\n",
       "\n",
-      "\tSimilarity (0.72338690096), Index (9)\n",
+      "\tDistance (0.72338690096), Index (9)\n",
       "\n",
       "\n",
       "Query (text):\n",
@@ -346,7 +347,7 @@
       "\n",
       "Result:\n",
       "\n",
-      "\tSimilarity (0.608183037117), Index (10)\n",
+      "\tDistance (0.608183037117), Index (10)\n",
       "\n",
       "\n",
       "Query (text):\n",
@@ -386,7 +387,7 @@
       "\n",
       "Result:\n",
       "\n",
-      "\tSimilarity (0.60589739321), Index (12)\n",
+      "\tDistance (0.60589739321), Index (12)\n",
       "\n",
       "\n",
       "Query (text):\n",
@@ -1100,9 +1101,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [py27]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "Python [py27]"
   },
   "language_info": {
    "codemirror_mode": {
