Improved NER to 36% with grouping capitalised entities

--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -604,6 +604,8 @@
     "            #Might be a number\n",
     "            if isNumber(word):\n",
     "                tag = 'NUMBER'\n",
+    "            elif isCapitalised(word):\n",
+    "                tag = 'OTHERCAP'\n",
     "        if (tag == prevTag):\n",
     "            prevWord += ' ' + word\n",
     "        else :\n",
@@ -620,6 +622,10 @@
     "        \"sixteen\", \"seventeen\", \"eighteen\", \"nineteen\", \"twenty\", \"thirty\", \"forty\", \"fifty\", \"sixty\", \"seventy\", \"eighty\", \"ninety\"\n",
     "       , \"hundred\", \"thousand\", \"million\", \"billion\", \"trillion\"]\n",
     "\n",
+    "def isCapitalised (word):\n",
+    "    if len(word) == 0:\n",
+    "        return False\n",
+    "    return word[0].isupper()\n",
     "\n",
     "# Returns true if the word represents a number\\n\",\n",
     "def isNumber(word):\n",
@@ -645,7 +651,7 @@
      "text": [
       "[(u'Raleigh', u'O'), (u'(', u'O'), (u'\\u02c8r\\u0251\\u02d0li', u'O'), (u';', u'O'), (u'RAH-lee', u'O'), (u')', u'O'), (u'is', u'O'), (u'the', u'O'), (u'capital', u'O'), (u'of', u'O'), (u'the', u'O'), (u'state', u'O'), (u'of', u'O'), (u'North', u'LOCATION'), (u'Carolina', u'LOCATION'), (u'as', u'O'), (u'well', u'O'), (u'as', u'O'), (u'the', u'O'), (u'seat', u'O'), (u'of', u'O'), (u'Wake', u'LOCATION'), (u'County', u'LOCATION'), (u'in', u'O'), (u'the', u'O'), (u'United', u'LOCATION'), (u'States', u'LOCATION'), (u'.', u'O')]\n",
       "\n",
-      "[(u' Raleigh ( \\u02c8r\\u0251\\u02d0li ; RAH-lee ) is the capital of the state of', u'O'), (u'North Carolina', u'LOCATION'), (u'as well as the seat of', u'O'), (u'Wake County', u'LOCATION'), (u'in the', u'O'), (u'United States', u'LOCATION'), (u'.', u'O')]\n"
+      "[('', u'O'), (u'Raleigh', 'OTHERCAP'), (u'( \\u02c8r\\u0251\\u02d0li ;', u'O'), (u'RAH-lee', 'OTHERCAP'), (u') is the capital of the state of', u'O'), (u'North Carolina', u'LOCATION'), (u'as well as the seat of', u'O'), (u'Wake County', u'LOCATION'), (u'in the', u'O'), (u'United States', u'LOCATION'), (u'.', u'O')]\n"
      ]
     }
    ],
@@ -658,11 +664,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "#Quick regex test:\n",
     "print isNumber('.25')\n",
@@ -675,6 +697,98 @@
     "print isNumber('h123') # Should this be a number?\n",
     "print isNumber('123m')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# For each question, evaluate if the answer is present as an entity\n",
+    "\n",
+    "def evaluateNER(questionsList,documentsList, numToEval):\n",
+    "    correct = []\n",
+    "    wrong = []\n",
+    "    for i in range (0, numToEval):\n",
+    "        documents = documentsList[i]\n",
+    "        questions = questionsList[i]\n",
+    "        for j in range (0, len(questions)):\n",
+    "            answer = questionsList[i][j][\"answer\"]\n",
+    "            answerID = questionsList[i][j][\"answer_sentence\"]\n",
+    "            possAnswers = refineWordTags(taggedDev[i][answerID])\n",
+    "            inThere = False\n",
+    "            for possAnswer in possAnswers:\n",
+    "                if possAnswer[0] == answer:\n",
+    "                    inThere = True\n",
+    "                    break\n",
+    "            if inThere:\n",
+    "                correct.append((i,j, possAnswers))\n",
+    "            else :\n",
+    "                wrong.append((i,j, answer, possAnswers))\n",
+    "    return (correct, wrong)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number Correct : 3052\n",
+      "Number incorrect: 5411\n",
+      "Average correct : 0.360628618693\n"
+     ]
+    }
+   ],
+   "source": [
+    "(corNER, wrongNER) = evaluateNER(dev, devSents,len(dev))\n",
+    "\n",
+    "print(\"Number Correct : \" + str(len(corNER)))\n",
+    "print(\"Number incorrect: \" + str(len(wrongNER)))\n",
+    "print(\"Average correct : \" + str((len(corNER) + 0.0) / (len(corNER)+len(wrongNER))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Show the wrong taggings\n",
+    "for num in range (0, 10):\n",
+    "    (i,j, answer, possAnswers) = wrong[ num]\n",
+    "    print \"ANSWER : \" + answer\n",
+    "    for possAnswer in possAnswers:\n",
+    "        print possAnswer[0]\n",
+    "    print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1101,9 +1215,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [py27]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [py27]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1115,7 +1229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
