Up to 40% splitting on stop words

--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -581,13 +581,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import re\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
     "\n",
     "# Given a stanford tagged list, refines the list by:\\n\",\n",
     "# Grouping all contiguous words with the same tag\\n\",\n",
@@ -606,6 +610,8 @@
     "                tag = 'NUMBER'\n",
     "            elif isCapitalised(word):\n",
     "                tag = 'OTHERCAP'\n",
+    "            elif isStopWord(word):\n",
+    "                tag = 'STOPWORD'\n",
     "        if (tag == prevTag):\n",
     "            prevWord += ' ' + word\n",
     "        else :\n",
@@ -635,7 +641,9 @@
     "    if word.lower() in numInWords:\n",
     "        return True\n",
     "    return False\n",
-    "\n"
+    "\n",
+    "def isStopWord(word):\n",
+    "    return word.lower() in stop_words\n"
    ]
   },
   {
@@ -709,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -741,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -750,9 +758,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number Correct : 3052\n",
-      "Number incorrect: 5411\n",
-      "Average correct : 0.360628618693\n"
+      "Number Correct : 3408\n",
+      "Number incorrect: 5055\n",
+      "Average correct : 0.402694080113\n"
      ]
     }
    ],
@@ -766,15 +774,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANSWER : active near-infrared illumination\n",
+      "\n",
+      "Night-vision\n",
+      "devices using active near-infrared illumination allow people\n",
+      "or\n",
+      "animals\n",
+      "to be\n",
+      "observed without\n",
+      "the\n",
+      "observer\n",
+      "being\n",
+      "detected .\n",
+      "\n",
+      "ANSWER : Infrared astronomy\n",
+      "\n",
+      "Infrared\n",
+      "astronomy uses sensor-equipped telescopes\n",
+      "to\n",
+      "penetrate dusty regions\n",
+      "of\n",
+      "space ,\n",
+      "such as\n",
+      "molecular clouds ; detect objects\n",
+      "such as\n",
+      "planets ,\n",
+      "and to\n",
+      "view highly red-shifted objects\n",
+      "from the\n",
+      "early days\n",
+      "of the\n",
+      "universe .\n",
+      "\n",
+      "ANSWER : red\n",
+      "\n",
+      "Infrared\n",
+      "astronomy uses sensor-equipped telescopes\n",
+      "to\n",
+      "penetrate dusty regions\n",
+      "of\n",
+      "space ,\n",
+      "such as\n",
+      "molecular clouds ; detect objects\n",
+      "such as\n",
+      "planets ,\n",
+      "and to\n",
+      "view highly red-shifted objects\n",
+      "from the\n",
+      "early days\n",
+      "of the\n",
+      "universe .\n",
+      "\n",
+      "ANSWER : Infrared thermal-imaging cameras\n",
+      "\n",
+      "Infrared\n",
+      "thermal-imaging cameras\n",
+      "are\n",
+      "used\n",
+      "to\n",
+      "detect heat loss\n",
+      "in\n",
+      "insulated systems ,\n",
+      "to\n",
+      "observe changing blood flow\n",
+      "in the\n",
+      "skin ,\n",
+      "and to\n",
+      "detect overheating\n",
+      "of\n",
+      "electrical apparatus .\n",
+      "\n",
+      "ANSWER : scientific\n",
+      "\n",
+      "Infrared\n",
+      "radiation\n",
+      "is\n",
+      "used\n",
+      "in\n",
+      "industrial , scientific ,\n",
+      "and\n",
+      "medical applications .\n",
+      "\n",
+      "ANSWER : 700 nm\n",
+      "\n",
+      "The\n",
+      "human eye\n",
+      "is\n",
+      "markedly less sensitive\n",
+      "to\n",
+      "light\n",
+      "above\n",
+      "700\n",
+      "nm wavelength ,\n",
+      "so\n",
+      "longer wavelengths make insignificant contributions\n",
+      "to\n",
+      "scenes illuminated\n",
+      "by\n",
+      "common light sources .\n",
+      "\n",
+      "ANSWER : near-IR\n",
+      "\n",
+      "However\n",
+      ", particularly intense near-IR light ( e.g. ,\n",
+      "from\n",
+      "IR\n",
+      "lasers ,\n",
+      "IR LED\n",
+      "sources ,\n",
+      "or from\n",
+      "bright daylight\n",
+      "with the\n",
+      "visible light removed\n",
+      "by\n",
+      "colored gels )\n",
+      "can be\n",
+      "detected\n",
+      "up to\n",
+      "approximately\n",
+      "780\n",
+      "nm ,\n",
+      "and will be\n",
+      "perceived\n",
+      "as\n",
+      "red light .\n",
+      "\n",
+      "ANSWER : 780 nm\n",
+      "\n",
+      "However\n",
+      ", particularly intense near-IR light ( e.g. ,\n",
+      "from\n",
+      "IR\n",
+      "lasers ,\n",
+      "IR LED\n",
+      "sources ,\n",
+      "or from\n",
+      "bright daylight\n",
+      "with the\n",
+      "visible light removed\n",
+      "by\n",
+      "colored gels )\n",
+      "can be\n",
+      "detected\n",
+      "up to\n",
+      "approximately\n",
+      "780\n",
+      "nm ,\n",
+      "and will be\n",
+      "perceived\n",
+      "as\n",
+      "red light .\n",
+      "\n",
+      "ANSWER : 1050 nm\n",
+      "\n",
+      "Sources\n",
+      "providing wavelengths\n",
+      "as\n",
+      "long\n",
+      "as\n",
+      "1050\n",
+      "nm\n",
+      "can be\n",
+      "seen\n",
+      "as a\n",
+      "dull red glow\n",
+      "in\n",
+      "intense sources , causing\n",
+      "some\n",
+      "difficulty\n",
+      "in\n",
+      "near-IR illumination\n",
+      "of\n",
+      "scenes\n",
+      "in the\n",
+      "dark ( usually\n",
+      "this\n",
+      "practical problem\n",
+      "is\n",
+      "solved\n",
+      "by\n",
+      "indirect illumination ) .\n",
+      "\n",
+      "ANSWER : hotter\n",
+      "\n",
+      "For\n",
+      "example ,\n",
+      "for any\n",
+      "pre-set emissivity value , objects\n",
+      "with\n",
+      "higher emissivity\n",
+      "will\n",
+      "appear hotter ,\n",
+      "and those with a\n",
+      "lower emissivity\n",
+      "will\n",
+      "appear cooler .\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Show the wrong taggings\n",
     "for num in range (0, 10):\n",
-    "    (i,j, answer, possAnswers) = wrong[ num]\n",
+    "    (i,j, answer, possAnswers) = wrongNER[ num]\n",
     "    print \"ANSWER : \" + answer\n",
     "    for possAnswer in possAnswers:\n",
     "        print possAnswer[0]\n",
