--- a/Basic QA System - Description and Justification.ipynb
+++ b/Basic QA System - Description and Justification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
        "u'Phonograph records are generally described by their diameter in inches (12\", 10\", 7\"), the rotational speed in rpm at which they are played (16 2\\u20443, 33 1\\u20443, 45, 78), and their time capacity resulting from a combination of those parameters (LP \\u2013 long playing 33 1\\u20443 rpm, SP \\u2013 78 rpm single, EP \\u2013 12-inch single or extended play, 33 or 45 rpm); their reproductive quality or level of fidelity (high-fidelity, orthophonic, full-range, etc.), and the number of audio channels provided (mono, stereo, quad, etc.).'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
        " u'question': u'What does LP stand for when it comes to time capacity?'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -1449,6 +1449,26 @@
     "            else :\n",
     "                wrong.append((i,j, answer, possAnswers))\n",
     "    return (correct, wrong)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 9, [('', u'O'), (u'Leaves', 'OTHERCAP'), (u'are', 'STOPWORD'), (u'particularly bright', u'O'), (u'in the', 'STOPWORD'), (u'near', u'O'), (u'IR', u'LOCATION'), (u',', u'O'), (u'and if all', 'STOPWORD'), (u'visible light leaks', u'O'), (u'from', 'STOPWORD'), (u'around', u'O'), (u'an', 'STOPWORD'), (u'IR-filter', 'OTHERCAP'), (u'are', 'STOPWORD'), (u'blocked ,', u'O'), (u'and the', 'STOPWORD'), (u'eye', u'O'), (u'is', 'STOPWORD'), (u'given', u'O'), (u'a', 'STOPWORD'), (u'moment', u'O'), (u'to', 'STOPWORD'), (u'adjust', u'O'), (u'to the', 'STOPWORD'), (u'extremely dim image coming', u'O'), (u'through a', 'STOPWORD'), (u'visually opaque', u'O'), (u'IR-passing', 'OTHERCAP'), (u'photographic filter ,', u'O'), (u'it is', 'STOPWORD'), (u'possible', u'O'), (u'to', 'STOPWORD'), (u'see', u'O'), (u'the', 'STOPWORD'), (u'Wood', 'OTHERCAP'), (u'effect', u'O'), (u'that', 'STOPWORD'), (u'consists', u'O'), (u'of', 'STOPWORD'), (u'IR-glowing', 'OTHERCAP'), (u'foliage .', u'O')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "(corAns, wrongAns) = evaluateNER(dev, devSents,len(dev))\n",
+    "print corAns[0]"
    ]
   },
   {
@@ -1676,9 +1696,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [py27]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "Python [py27]"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
