Parallel implementation of Basic QA Answer Ranking to debug performance.

--- a/stripped.ipynb
+++ b/stripped.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 470,
    "metadata": {
     "collapsed": false
    },
@@ -381,12 +381,12 @@
     "            \n",
     "            if set_span.issubset(question):\n",
     "                \n",
-    "                ranked_list.append([entity, -1])\n",
+    "                ranked_list.append([entity, 1])\n",
     "#                 print \"IN\", raw_span, span_tag, set_span, question\n",
     "                \n",
     "            else:\n",
     "                \n",
-    "                ranked_list.append([entity, 1])\n",
+    "                ranked_list.append([entity, 2])\n",
     "#                 print \"OUT\", raw_span, span_tag, set_span, question\n",
     "    \n",
     "    return sorted(ranked_list, key=lambda x: x[1], reverse=True)"
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 471,
    "metadata": {
     "collapsed": true
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 472,
    "metadata": {
     "collapsed": true
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 473,
    "metadata": {
     "collapsed": true
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 474,
    "metadata": {
     "collapsed": false
    },
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 475,
    "metadata": {
     "collapsed": true
    },
@@ -598,19 +598,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 476,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   [(u'Leaves', 'OTHERCAP'), 0.8147762747138397],\n",
+      "    [(u'IR-filter', 'OTHERCAP'), 0.6493236212278877],\n",
+      "    [(u'IR-passing', 'OTHERCAP'), 0.1748178980228928],\n",
+      "    [(u'Wood', 'OTHERCAP'), 0.06555671175858481],\n",
+      "    [(u'IR-glowing', 'OTHERCAP'), 0.02497398543184183],\n",
+      "    [(u'IR', u'LOCATION'), 0.0]]\n",
+      "\n",
+      "[[(u'The', 'OTHERCAP'), 0.0]]\n",
+      "\n",
+      "[   [(u'William Herschel', u'PERSON'), 1.5555555555555556],\n",
+      "    [(u'19th', 'NUMBER'), 0.14814814814814814],\n",
+      "    [(u'The', 'OTHERCAP'), 0.0]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateAnswerRanking2(dev, devSents, len(dev))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 479,
    "metadata": {
     "collapsed": true
    },
@@ -637,7 +657,7 @@
     "                \n",
     "#         pp.pprint(third_pass)\n",
     "\n",
-    "        top_answer = first_pass.pop(0)\n",
+    "        top_answer = third_pass.pop(0)\n",
     "#         pp.pprint(top_answer)        \n",
     "        answerPredicited = top_answer[0][0]\n",
     "        \n",
@@ -655,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 480,
    "metadata": {
     "collapsed": false
    },
@@ -679,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 481,
    "metadata": {
     "collapsed": false,
     "scrolled": false
